fix:button icon align issue

--- a/src/blocks/call-to-action/style.scss
+++ b/src/blocks/call-to-action/style.scss
@@ -16,6 +16,11 @@
 	fill: currentColor;
 }
 
+.uagb-cta__button-link-wrapper {
+	display: flex;
+	align-items: center;
+}
+
 .uagb-cta__outer-wrap {
 	position: relative;
 
